--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -21,5 +21,5 @@ bevy_transform = { git = "https://github.com/bevyengine/bevy.git" }
 bevy_render = { git = "https://github.com/bevyengine/bevy.git" }
 bevy_sprite = { git = "https://github.com/bevyengine/bevy.git" }
 bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "bevy_master", optional = true }
+bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "master", optional = true }
 fnv = "^1.0"
