--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -13,13 +13,13 @@ default = []
 3d = []
 
 [dependencies]
-heron_core = { path = "../core", version = "^0.1.1"}
-bevy_math = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_transform = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_render = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_sprite = { git = "https://github.com/bevyengine/bevy.git" }
-bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
+heron_core = { path = "../core", version = "^0.1.1" }
+bevy_math = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_transform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_render = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_sprite = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
+bevy_asset = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
 bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "master", optional = true }
 fnv = "^1.0"
